SERVER-12842 do not add filterSet to explain if solution is not available in single solution runner